# ilivery

./: .gitignore  README.md  pyproject.toml
configs/s12/: porsche_cup_992.jsonnet
docs/: CHANGELOG.md
ilivery/: __init__.py  build_livery.py  cli.py  colorfuncs.py  colormaps.py  decorators.py  layer.py  patches.py  textures.py
ilivery/config/: base_model.py  color_configs.py  layer_configs.py  livery_config.py
ilivery/layers/: __init__.py  class_decal_layer.py  decal_layer.py  patch_layer.py  pattern_layer.py  solid_layer.py  texture_layer.py
ilivery/patterns/: __init__.py  gradient.py  hexagons.py  logo.py  poly_pattern.py  squares.py  triangles.py
ilivery/utils/: __init__.py  color.py  img.py  mpl.py  os.py  psd.py
resources/templates/porsche992cup/s12/: challenge.psd  club.psd  entry.psd  pro.psd  sport.psd
resources/templates/test_template/: segmented.psd
tests/: conftest.py  test_build_livery.py  test_colorfuncs.py  test_colormaps.py  test_section_logic.py
tests/layers/: test_class_decal_layer.py  test_decal_layer.py  test_mask_layer.py  test_patch_layer.py  test_pattern_layer.py  test_solid_layer.py  test_texture_layer.py
tests/utils/: test_color.py
